# bilibili-video-kb

./: .gitignore  README.md  app.js  index.html  pyproject.toml  server.mjs  styles.css
.agents/skills/bilibili-video-kb/: SKILL.md
.agents/skills/gstack-autoplan/: SKILL.md
.agents/skills/gstack-benchmark/: SKILL.md
.agents/skills/gstack-browse/: SKILL.md
.agents/skills/gstack-canary/: SKILL.md
.agents/skills/gstack-careful/: SKILL.md
.agents/skills/gstack-cso/: SKILL.md
.agents/skills/gstack-design-consultation/: SKILL.md
.agents/skills/gstack-design-review/: SKILL.md
.agents/skills/gstack-document-release/: SKILL.md
.agents/skills/gstack-freeze/: SKILL.md
.agents/skills/gstack-guard/: SKILL.md
.agents/skills/gstack-investigate/: SKILL.md
.agents/skills/gstack-land-and-deploy/: SKILL.md
.agents/skills/gstack-office-hours/: SKILL.md
.agents/skills/gstack-plan-ceo-review/: SKILL.md
.agents/skills/gstack-plan-design-review/: SKILL.md
.agents/skills/gstack-plan-eng-review/: SKILL.md
.agents/skills/gstack-qa/: SKILL.md
.agents/skills/gstack-qa-only/: SKILL.md
.agents/skills/gstack-retro/: SKILL.md
.agents/skills/gstack-review/: SKILL.md
docs/: INDEX.md  VIDEO_KB_AUTOMATION.md
memory-bank/: README.md  activeContext.md  decisionLog.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
scripts/: run_video_kb.ps1  setup_video_kb.ps1
src/video_kb/: __init__.py  cli.py  config.py  models.py  obsidian.py  pipeline.py  utils.py  xmind_export.py
tests/: test_video_kb_obsidian.py
(+32 files in other folders)
